We are using jekyll-gist plugin now

--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,9 @@ twitter_username: frostyx
 github_username:  frostyx
 permalink: /posts/:title
 
+plugins:
+  - jekyll-gist
+
 # Build settings
 markdown: kramdown
 
